# joint_analysis

./: .gitignore  .gitlab-ci.yml  .polyscope.ini  README.md  imgui.ini  loadnpy.py  pyproject.toml  requirements.txt  run_application.py  setup.py
data/: joint_expected_scores.yaml
demo_data/: ball.npy  gt_params.npy  planar.npy  prismatic.npy  revolute.npy  screw.npy
evaluation/: README.MD  evaluation_martin_slide_batch.py  evaluation_martin_thesis.py  evaluation_sturm.py  evaluation_sturm_slide_batch.py  my_evaluation_slide.py  my_evaluation_slide_batch.py  my_evaluation_thesis.py  unwrap.py  viz_data2.py  viz_dense_point.py  viz_obj_in_raw_frame.py
evaluation/parahome_data_slide/: all_scenes_transformed_axis_pivot_data.json  extraction_summary.txt  target_action_statistics.json
evaluation/parahome_data_thesis/: joint_info.json
evaluation/result_slide/: Sturm_result_noise0.01.json  my_result_noise0.01.json  my_result_noise0.015.json  my_result_noise0.json
evaluation/result_thesis/: calculate_error.py
examples/: .polyscope.ini  axis_error_analysis.json  demo.py  imgui.ini  joint_analysis_evaluation_20250528_192842.json  joint_analysis_evaluation_20250528_193737.json  joint_score.py  martin_joint_analysis_evaluation_noise_0p01_20250529_112037.json  optimized_joint_analysis_evaluation_20250528_193414.json  processed_joint_data_noise_0p01_20250529_113304.json  test-martin.py  test.py  test1.py  test_martinbatch.py  test_strumbatch.py  test_sturm.py  testme.py  testme_allscengroundtruth.py  testme_no_scen.py  testme_no_scen_torch.py  viz_data.py  viz_data3.py
examples/demo_data/: ball.npy  planar.npy  prismatic.npy  revolute.npy  screw.npy
exported_pointclouds/Ball_Joint/: Ball_Joint_0.npy
exported_pointclouds/Planar_Mouse/: Planar_Mouse_0.npy
exported_pointclouds/Prismatic_Door/: Prismatic_Door_0.npy  Prismatic_Door_1.npy
exported_pointclouds/Revolute_Door/: Revolute_Door_0.npy
joint_analysis/: __init__.py  main.py
joint_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
joint_analysis/core/: __init__.py  ekf.py  geometry.py  joint_estimation.py  joint_estimation1.py  scoring.py  type.py  utils.py
joint_analysis/data/: __init__.py  data_loader.py  joint_expected_scores.yaml
joint_analysis/synthetic/: __init__.py  data_generator.py
joint_analysis/viz/: __init__.py  gui.py  plot_saver.py  polyscope_viz.py
repruduction_paper/: README.MD
repruduction_paper/martin_martin/: reproduction_martin.py
repruduction_paper/stuerm/: reproduction_sturm.py
sg_filter/: savitzky_golay_so3.py  so3_functions.py
tests/: test1.1.py  test1.2.py  test1.3.py  test1.4.py  test1.py  test_basic.py  viz_kvil_data_3.py
