[project]
name = "joint-analysis"
version = "0.1.0"
authors = [
    {name = "Rui Cheng", email = "cr1744733299@gmail.com"},
    {name = "Jianfeng Gao", email = "jianfeng.gao@kit.edu"},
]
description = "A framework for estimating and analyzing joint types from point cloud data using advanced filtering and multi-level perception techniques"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robotics", "joint-analysis", "point-cloud", "computer-vision", "articulated-objects", "3d-vision"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core scientific computing - stable version ranges
    "numpy>=1.20.0,<2.0.0",           # Avoid potential breaking changes in numpy 2.x
    "scipy>=1.7.0,<1.14.0",          # Allow stable updates in 1.x series
    "matplotlib>=3.5.0,<3.9.0",       # Stable versions in 3.x series
    "scikit-learn>=1.0.0,<1.6.0",     # Machine learning library 1.x series

    # Deep learning framework - PyTorch ecosystem
    "torch>=2.0.0,<2.6.0",           # PyTorch 2.x series
    "torchvision>=0.15.0,<0.21.0",   # TorchVision corresponding to torch version
    "torchaudio>=2.0.0,<2.6.0",      # TorchAudio corresponding to torch version

    # 3D data processing and visualization - key visualization libraries
    "polyscope==2.4.0",       # 3D visualization, avoid major version updates
    "open3d>=0.16.0,<0.19.0",        # Stable versions of 3D processing library
    "dearpygui==1.8.0",     # GUI library - moved to optional dependencies to avoid GLIBC issues

    # Computer vision - image processing
    "opencv-python>=4.5.0,<4.11.0",  # OpenCV 4.x series
    "Pillow>=8.0.0,<11.0.0",         # PIL image processing library

    # Data processing and utilities - data processing tools
    "pandas>=1.3.0,<2.3.0",          # Data analysis library
    "seaborn>=0.11.0,<0.14.0",       # Statistical visualization
    "tqdm>=4.60.0,<5.0.0",           # Progress bar library
    "click>=8.0.0,<9.0.0",           # Command line tools
    "pyyaml>=6.0.0,<7.0.0",          # YAML processing
    "tabulate>=0.9.0,<1.0.0",        # Table formatting

    # Logging and debugging - debugging tools
    "coloredlogs>=15.0,<16.0",       # Colored logging
    "icecream>=2.1.0,<3.0.0",        # Debugging tool
    "rich>=12.0.0,<14.0.0",          # Rich text output

    # Data serialization - data serialization libraries
    "marshmallow>=3.15.0,<4.0.0",    # Serialization library
    "marshmallow-dataclass>=8.5.0,<9.0.0",  # Dataclass support
    "marshmallow_enum>=1.5.1,<2.0.0", # Enum support

    # Additional utilities for the project - project-specific tools
    "natsort>=8.0.0,<9.0.0",         # Natural sorting
    "deprecation>=2.1.0,<3.0.0",     # Deprecation warnings
    "typeguard>=2.13.0,<5.0.0",      # Type checking
    "einops>=0.6.0,<1.0.0",          # Tensor operations
]

[project.optional-dependencies]
# Development dependencies - based on compatible versions
dev = [
    "pytest>=8.3.0,<8.4.0",          # Testing framework
    "pytest-cov>=4.0.0,<6.0.0",     # Test coverage
    "flake8>=5.0.0,<8.0.0",          # Code linting
    "black>=22.0.0,<25.0.0",         # Code formatting
    "isort>=5.10.0,<6.0.0",          # Import sorting
    "mypy>=1.0.0,<2.0.0",            # Type checking
    "types-setuptools>=57.0.0,<70.0.0", # Type definitions
    "pre-commit>=2.15.0,<4.0.0",     # Git hooks
]

# Evaluation and research dependencies - based on your actual versions
research = [
    "jupyter-core==5.7.2",    # Matches your 5.7.2 version
    "notebook>=6.4.0,<8.0.0",        # Notebook interface
    "ipywidgets==8.1.5",      # Matches your 8.1.5 version
    "wandb==0.19.7",         # Matches your 0.19.7 version
    "tensorboardx>=2.6.0,<2.7.0",    # Matches your 2.6.2.2 version
    "gpytorch==1.14.0",      # Matches your 1.14 version
]

# GUI support - based on your successfully installed versions
gui = [
    "dearpygui==1.8.0",       # Matches your 1.8.0 version (successfully installed)
    "ipywidgets==8.1.0",      # Interactive components
]

# Headless mode dependencies - based on your actual versions
headless = [
    "matplotlib==3.10.0",    # Matches your 3.10.0 version
    "plotly==6.0.0",          # Matches your 6.0.0 version
    "ipython==8.32.0",       # Matches your 8.32.0 version
]

# Full robot-utils integration - based on your actual installed versions
robot-utils = [
    "robot-utils==1.0.0",     # Matches your environment's 1.0.0 version
    "gdown==5.2.0",           # Matches your 5.2.0 version
    "distlib==0.3.9",         # Matches your 0.3.9 version
    "GitPython==3.1.44",      # Matches your 3.1.44 version
    "pathos==0.3.3",          # Matches your 0.3.3 version
    "wandb==0.19.7",         # Matches your 0.19.7 version
    "torchsummary==1.5.1",    # Matches your 1.5.1 version
    "tensorboard_logger==0.1.0", # Matches your 0.1.0 version
    "inquirer==3.4.0",        # Matches your 3.4.0 version
]

# All optional dependencies
all = [
    "joint-analysis[dev,research,robot-utils,headless]"
]

# Complete GUI environment (requires newer system)
full-gui = [
    "joint-analysis[dev,research,robot-utils,gui,headless]"
]

[project.urls]
Homepage = "https://github.com/Liebesonnen/joint_analysis"
Repository = "https://github.com/Liebesonnen/joint_analysis.git"
Documentation = "https://github.com/Liebesonnen/joint_analysis/blob/main/README.md"
"Bug Tracker" = "https://github.com/Liebesonnen/joint_analysis/issues"

[project.scripts]
# Main application entry points
joint-analysis = "joint_analysis.main:main"
joint-analysis-gui = "joint_analysis.main:run_gui_application"
joint-analysis-eval = "joint_analysis.main:run_evaluation"

# Evaluation scripts
eval-martin = "evaluation.evaluation_martin_thesis:main"
eval-sturm = "evaluation.evaluation_sturm:main"
eval-my-thesis = "evaluation.my_evaluation_thesis:main"

# Reproduction scripts
reproduce-martin = "reproduction_paper.martin_martin.reproduction_martin:main"
reproduce-sturm = "reproduction_paper.sturm.reproduction_sturm:main"
reproduce-so3 = "reproduction_paper.so3_savgol.savitzky_golay_so3:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["joint_analysis*", "evaluation*", "reproduction_paper*"]
exclude = ["tests*", "demo_data*", "*.egg-info*"]

[tool.setuptools.package-data]
"joint_analysis" = ["*.yaml", "*.yml", "*.json"]
"evaluation" = ["*.json", "*.yaml"]
"reproduction_paper" = ["*.json", "*.yaml"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.conda
  | build
  | dist
  | demo_data
  | exported_pointclouds
  | demo_screenshots
  | demo_plots
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_third_party = [
    "numpy", "scipy", "matplotlib", "torch", "cv2", "polyscope",
    "dearpygui", "sklearn", "open3d", "PIL", "pandas", "seaborn"
]
known_first_party = ["joint_analysis", "evaluation", "reproduction_paper"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to false for research code flexibility
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

# Ignore missing imports for some third-party libraries
[[tool.mypy.overrides]]
module = [
    "polyscope.*",
    "dearpygui.*",
    "open3d.*",
    "robot_utils.*",
    "cv2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "joint_analysis", "evaluation"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
    "integration: marks tests as integration tests",
    "visualization: marks tests as requiring display",
]

[tool.coverage.run]
source = ["joint_analysis"]
omit = [
    "*/tests/*",
    "*/demo_data/*",
    "*/evaluation/*",
    "*/reproduction_paper/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"evaluation/*.py" = ["E402", "F401", "F841"]  # Allow research code flexibility
"reproduction_paper/*.py" = ["E402", "F401", "F841"]  # Allow research code flexibility